refactor: delete gson refactor: move logic of processing requests from service to repository